Added a footer, fixed the padding, and adjusted some animations.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 		<link rel="stylesheet" href="/css/hotels.css" />
 		<link rel="stylesheet" href="/css/travelInformation.css" />
 		<link rel="stylesheet" href="/css/faq.css" />
+		<link rel="stylesheet" href="/css/footer.css" />
 
 		<!-- Animate CSS -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
@@ -126,8 +127,8 @@
 
 		<!-- Ceremony -->
 		<div class="container-fluid ceremony" id="ceremony">
-			<div class="row align-items-center wow animate__animated animate__fadeInLeft" data-wow-offset="300">
-				<div class="col-lg-6">
+			<div class="row align-items-center" >
+				<div class="col-lg-6 wow animate__animated animate__fadeInLeft" data-wow-offset="300">
 					<h2 class="ceremonyTitle">Ceremony</h2>
 					<p class="church-venue-text">
 						<i class="fas fa-church"></i
@@ -141,7 +142,7 @@
 					</p>
 				</div>
 
-				<div class="col-lg-6">
+				<div class="col-lg-6 wow animate__animated animate__fadeInRight" data-wow-offset="300">
 					<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
 						<div class="carousel-inner">
 							<div class="carousel-item active">
@@ -211,8 +212,8 @@
 
 		<!-- Venue -->
 		<div class="container-fluid venue" id="venue">
-			<div class="row align-items-center  wow animate__animated animate__fadeInRight" data-wow-offset="300">
-				<div class="col-lg-6 order-lg-2">
+			<div class="row align-items-center">
+				<div class="col-lg-6 order-lg-2 wow animate__animated animate__fadeInRight" data-wow-offset="300">
 					<h2 class="venueTitle">Reception</h2>
 					<p class="church-venue-text">
 						<i class="far fa-building"></i
@@ -226,7 +227,7 @@
 					</p>
 				</div>
 
-				<div class="col-lg-6 order-lg-1">
+				<div class="col-lg-6 order-lg-1 wow animate__animated animate__fadeInLeft" data-wow-offset="300"">
 					<div class="youtube-container">
 						<iframe
 							class="youtube-video"
@@ -300,7 +301,7 @@
 									href="https://www.kayak.com/hotels/Misin-Catedral-Morelia,Morelia-c23807-h164480-details/2021-07-28/2021-08-01/2adults?sid=KdBECq--G0#overview"
 									target="_blank"
 									rel="noopener noreferrer">
-									<button class="kayak-button">
+									<button class="kayak-button hvr-float">
 										<span class="hotelCompareKAYAK1">Compare prices on </span><img src="/images/hotels/KAYAK.svg" class="kayak-logo" alt="KAYAK"/>
 									</button>
 								</a>
@@ -354,7 +355,7 @@
 									href="https://www.kayak.com/hotels/Hotel-Alameda-Centro-Historico,Morelia-c23807-h161154-details/2021-07-28/2021-08-01/2adults?sid=KdCkLri-0x#overview"
 									target="_blank"
 									rel="noopener noreferrer">
-									<button class="kayak-button">
+									<button class="kayak-button hvr-float">
 										<span class="hotelCompareKAYAK2">Compare prices on </span><img src="/images/hotels/KAYAK.svg" class="kayak-logo" alt="KAYAK"/>
 									</button>
 								</a>
@@ -415,7 +416,7 @@
 									href="https://www.kayak.com/hotels/Los-Juaninos,Morelia-c23807-h97198-details/2021-07-28/2021-08-01/2adults?sid=KdDEOq-7TK"
 									target="_blank"
 									rel="noopener noreferrer">
-									<button class="kayak-button">
+									<button class="kayak-button hvr-float">
 										<span class="hotelCompareKAYAK3">Compare prices on </span><img src="/images/hotels/KAYAK.svg" class="kayak-logo" alt="KAYAK"/>
 									</button>
 								</a>
@@ -471,7 +472,7 @@
 									href="https://www.kayak.com/hotels/Herencia-By-Hosting-House,Morelia-c23807-h269897-details/2021-07-28/2021-08-01/2adults?sid=KdDkGZh5G3#overview"
 									target="_blank"
 									rel="noopener noreferrer">
-									<button class="kayak-button">
+									<button class="kayak-button hvr-float">
 										<span class="hotelCompareKAYAK4">Compare prices on </span><img src="/images/hotels/KAYAK.svg" class="kayak-logo" alt="KAYAK"/>
 									</button>
 								</a>
@@ -529,7 +530,7 @@
 									href="https://www.kayak.com/hotels/Hotel-de-la-Soledad,Morelia-c23807-h185802-details/2021-07-28/2021-08-01/2adults?sid=KbCkCh6vJv#overview"
 									target="_blank"
 									rel="noopener noreferrer">
-									<button class="kayak-button">
+									<button class="kayak-button hvr-float">
 										<span class="hotelCompareKAYAK5">Compare prices on </span><img src="/images/hotels/KAYAK.svg" class="kayak-logo" alt="KAYAK"/>
 									</button>
 								</a>
@@ -587,7 +588,7 @@
 									href="https://www.kayak.com/hotels/Cantera-Diez-Hotel-Boutique,Morelia-c23807-h203059-details/2021-07-28/2021-08-01/2adults?sid=KdDkD5evvH#overview"
 									target="_blank"
 									rel="noopener noreferrer">
-									<button class="kayak-button">
+									<button class="kayak-button hvr-float">
 										<span class="hotelCompareKAYAK6">Compare prices on </span><img src="/images/hotels/KAYAK.svg" class="kayak-logo" alt="KAYAK"/>
 									</button>
 								</a>
@@ -720,12 +721,27 @@
 						<strong><span class="faqQuestion6">I still have questions, what is the best way to contact you?</span></strong>
 						<p>
 							<span class="faqAnswer6">We know that these are uncertain times due to COVID-19. If you feel that you need an extension to RSVP or for any other questions,
-								please send us an e-mail at </span><a class="faqAnswer6Email" href = "mailto: ortizmuro.wedding@gmail.com. ">ortizmuro.wedding@gmail.com</a>.
+								please send us an e-mail at </span><a class="faqAnswer6Email" href = "mailto: ortizmuro.wedding@gmail.com">ortizmuro.wedding@gmail.com</a>.
 						</p>
 					</p>
 				</div>
 			</div>
 		</div>
+
+		<!-- Footer -->
+		<Footer class="container-fluid footer">
+			<h3 id="footer-header">Get in touch</h3>
+			<p>This website was 100% custom-built. Contact me if you would like a similar site built for your next event.</p>
+		
+
+			<div class="social-media-icons">
+				<span class="hvr-float"><a href="mailto: ortiz.ivan93@gmail.com"><i class="far fa-envelope fa-2x"></i></a></span>
+				<span class="hvr-float"><a href="https://www.instagram.com/ivunortiz/" target="_blank" rel="noopener noreferrer"><i class="fa fa-instagram fa-2x"></i></a></span>
+				<span class="hvr-float"><a href="https://www.linkedin.com/in/ivanortiz93" target="_blank" rel="noopener noreferrer"><i class="fa fa-linkedin fa-2x"></i></a></span>
+				<span class="hvr-float"><a href="https://github.com/ivort1" target="_blank" rel="noopener noreferrer"><i class="fa fa-github fa-2x"></i></a></span>
+			</div>
+			<span class="copyright-text"><i class="fa fa-copyright"></i> Ivan Ortiz 2021</span>
+		</Footer>
 
 		<!-- Bootstrap scripts -->
 		<script
