Adjusted the footer text size and alignment

--- a/index.html
+++ b/index.html
@@ -663,8 +663,7 @@
 								href="https://www.xe.com/currencyconverter/convert/?Amount=1&From=USD&To=MXN"
 								target="_blank"
 								rel="noopener noreferrer">
-								exchange rate
-							</a>
+								exchange rate</a>
 							<span class="travelInformationExchange3">is usually around $20 MXN for $1 USD.</span>
 						</div>
 					</div>
@@ -735,10 +734,10 @@
 		
 
 			<div class="social-media-icons">
-				<span class="hvr-float"><a href="mailto: ortiz.ivan93@gmail.com"><i class="far fa-envelope fa-2x"></i></a></span>
-				<span class="hvr-float"><a href="https://www.instagram.com/ivunortiz/" target="_blank" rel="noopener noreferrer"><i class="fa fa-instagram fa-2x"></i></a></span>
-				<span class="hvr-float"><a href="https://www.linkedin.com/in/ivanortiz93" target="_blank" rel="noopener noreferrer"><i class="fa fa-linkedin fa-2x"></i></a></span>
-				<span class="hvr-float"><a href="https://github.com/ivort1" target="_blank" rel="noopener noreferrer"><i class="fa fa-github fa-2x"></i></a></span>
+				<span class="hvr-float"><a href="mailto: ortiz.ivan93@gmail.com"><i class="far fa-envelope fa-lg"></i></a></span>
+				<span class="hvr-float"><a href="https://www.instagram.com/ivunortiz/" target="_blank" rel="noopener noreferrer"><i class="fa fa-instagram fa-lg"></i></a></span>
+				<span class="hvr-float"><a href="https://www.linkedin.com/in/ivanortiz93" target="_blank" rel="noopener noreferrer"><i class="fa fa-linkedin fa-lg"></i></a></span>
+				<span class="hvr-float"><a href="https://github.com/ivort1" target="_blank" rel="noopener noreferrer"><i class="fa fa-github fa-lg"></i></a></span>
 			</div>
 			<span class="copyright-text"><i class="fa fa-copyright"></i> Ivan Ortiz 2021</span>
 		</Footer>
