Fixed the phone number for Alameda, added Alameda as one of the hotels we've stayed at, modified the hotel date notification.

--- a/index.html
+++ b/index.html
@@ -245,15 +245,21 @@
 		<!-- Hotels -->
 		<div class="container-fluid hotels wow animate__animated animate__fadeIn" data-wow-offset="300" data-wow-delay="0.2s" id="hotels">
 			<h2 class="hotelTitle" id="hotels-h2">Hotels</h2>
-			<p class="hotels-text hotelIntroText1"> We have personally stayed at Herencia, Los Juaninos, and Hotel de La Soledad and fully recommend all three of them. The majority of
+			<p class="hotels-text hotelIntroText1"> We have personally stayed at Alameda, Herencia, Los Juaninos, and La Soledad and fully recommend all four of them. The majority of
 				hotels offer a shuttle service to and from the airport for a fee. Ask your hotel for more information.
 			</p>
 			<p class="hotels-text hotelIntroText2">
 				Third-party sites (e.g. Expedia, Travelocity, Hotels.com, etc) are usually cheaper than booking through the hotels directly. However, if you book through a third-party site, 
 				we advise that you contact the hotel afterwards to confirm your reservation.
-				<p class="hotel-warning">
-					<i class="fas fa-exclamation-triangle"></i><strong><span class="hotelDateVerification"> Verify your dates when comparing on KAYAK. By default, the range is set for 5 days and 4 nights — Wednesday, 7/28 through Sunday, 8/1.</span></strong>
-				</p>
+
+				<div id="hotelWarning">
+					<div class="dateNotification-flex1">
+						<i class="fas fa-exclamation-triangle fa-lg"></i></button>
+					</div>
+					<div class="dateNotification-flex2">
+						<strong><span class="hotelDateVerification">Verify your dates when comparing on KAYAK. By default, the range is set for 5 days and 4 nights — Wednesday, 7/28 through Sunday, 8/1.</span></strong>
+					</div>
+				</div>
 			</p>
 			<div class="row">
 				<div class="col-md-6 col-lg-4 d-flex align-items-stretch">
@@ -327,7 +333,7 @@
 								<p class="card-text hotelDescriptionAlameda">
 									Another great option that's also located across from the main plaza and cathedral. This hotel has a more modern feel and has great rates. 
 								</p>
-								<p><i class="fas fa-phone-alt"></i><a href="tel:+52443-456-7890">+52 (443) 456-7890</a></p>
+								<p><i class="fas fa-phone-alt"></i><a href="tel:+52800-450-0000">+52 (800) 450-0000</a></p>
 								<p><i class="far fa-envelope"></i><a href = "mailto: reserva@hotel-alameda.com.mx">reserva@hotel-alameda.com.mx</p>
 								<p>
 									<a
@@ -491,7 +497,7 @@
 						<div class="card-body">
 
 							<div class="hotels-flex-1">
-								<h5 class="card-title">Hotel de La Soledad</h5>
+								<h5 class="card-title">La Soledad</h5>
 								<p class="card-text">
 									<i class="fas fa-dollar-sign"></i
 									><i class="fas fa-dollar-sign"></i
