Navbar hdropdown menu has been updated with the correct styling

--- a/index.html
+++ b/index.html
@@ -70,13 +70,12 @@
 						<a class="nav-link js-scroll-trigger" href="#rsvp">RSVP</a>
 						<a class="nav-link js-scroll-trigger navCeremony" href="#ceremony" >Ceremony</a>
 						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							<a class="nav-link dropdown-toggle navReception" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 							  Reception
 							</a>
 							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-							  <a class="dropdown-item navVenue" href="#venue">Venue</a>
-							  <a class="dropdown-item" href="#">Schedule</a>
-							  <a class="dropdown-item" href="./food-menu.html">Food Menu</a>
+							  <a class="dropdown-item js-scroll-trigger navVenue" href="#venue" style="text-decoration: none;">Venue</a>
+							  <a class="dropdown-item navFoodMenu" href="./food-menu.html" style="text-decoration: none;">Food Menu</a>
 							</div>
 						  </li>
 						<!-- <a class="nav-link js-scroll-trigger navVenue" href="#venue">Reception</a> -->
@@ -224,7 +223,7 @@
 		<div class="container-fluid venue" id="venue">
 			<div class="row align-items-center">
 				<div class="col-lg-6 order-lg-2 wow animate__animated animate__fadeInRight" data-wow-offset="300">
-					<h2 class="venueTitle">Reception</h2>
+					<h2 class="venueTitle">Venue</h2>
 					<p class="church-venue-text">
 						<i class="far fa-building"></i
 						><a
