--- a/food-menu.html
+++ b/food-menu.html
@@ -61,7 +61,7 @@
 					<div class="row">
 						<div class="col-md-6 col-lg-4 d-flex align-items-stretch">
 							<div class="card wow animate__animated animate__fadeInDown animate__faster">
-								<img src="./images/food/appetizer.JPG" class="card-img-top" alt="appetizer">
+								<img src="./images/food/appetizer_optimized.jpg" class="card-img-top" alt="appetizer">
 								<div class="card-body">
 									<h5 class="card-title menuAppetizerTitle">Appetizer</h5>
 									<p class="card-text menuAppetizerBody">Pasta filo relleno de queso de cabra con ceniza a la albahaca, con culis de jitomate al tomillo</p>
@@ -71,7 +71,7 @@
 
 						<div class="col-md-6 col-lg-4 d-flex align-items-stretch">
 							<div class="card wow animate__animated animate__fadeInDown animate__fast" data-wow-offset="300">
-								<img src="./images/food/entree.jpg" class="card-img-top" alt="entree">
+								<img src="./images/food/entree_optimized.jpg" class="card-img-top" alt="entree">
 								<div class="card-body">
 									<h5 class="card-title menuEntreeTitle">Entree</h5>
 									<p class="card-text menuEntreeBody">Filet mignon wrapped in bacon, with a blend of pomegranate sauce and marsala wine poured on top. Served with mashed sweet potatoes
@@ -83,7 +83,7 @@
 
 						<div class="col-md-6 col-lg-4 d-flex align-items-stretch">
 							<div class="card wow animate__animated animate__fadeInDown animate__delay-0.5s" data-wow-offset="300">
-								<img src="./images/food/dessert.JPG" class="card-img-top" alt="dessert">
+								<img src="./images/food/dessert_optimized.jpg" class="card-img-top" alt="dessert">
 								<div class="card-body">
 									<h5 class="card-title menuDessertTitle">Dessert</h5>
 									<p class="card-text menuDessertBody">Red fruit tartlet & walnut blondie with ice cream on top (walnut blondie is not pictured)</p>
@@ -101,9 +101,9 @@
 
 						</div>
 						<div class="col-lg-2 diamond-divider-one wow animate__animated animate__fadeInDown" data-wow-offset="300">
-							<span>♦</span>
-							<span>♦</span>
-							<span>♦</span>
+							<span>&#x25C6</span>
+							<span>&#x25C6</span>
+							<span>&#x25C6</span>
 						</div>
 
 					<!-- Wedding Cake -->
@@ -119,9 +119,9 @@
 
 					<div class="row divider-two-row wow animate__animated animate__fadeInDown" data-wow-offset="300">
 						<div class="col-lg-12 diamond-divider-two">
-							<span>♦</span>
-							<span>♦</span>
-							<span>♦</span>
+							<span>&#x25C6</span>
+							<span>&#x25C6</span>
+							<span>&#x25C6</span>
 						</div>
 					</div>
 
