Changed rsvp deadline date

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 					<span class="rsvpDate">Friday, July 30, 2021</span>
 					<br>
 					<span>Morelia, Michoacán, México</span>
-					<p class="rsvpDeadline">The deadline to RSVP is Sunday, April 25</p>
+					<p class="rsvpDeadline">The deadline to RSVP is Sunday, May 30</p>
 				</div>
 			</div>
 
@@ -696,7 +696,7 @@
 						<p class="faqAnswer2">
 							The venue is located on a rooftop terrace and is not suitable for small children. However, we are providing a nanny service free of charge for all of
 							our guests and it covers the duration of the entire reception. This is an accommodation provided by the venue and children ages 2 - 9 will be cared for inside of
-							a playroom adjacent to the terrace. We will have one nanny per six kids and parents will be free to check in on their children whenever they please. 
+							a <a href="/pages/salon-for-kids.html">salon adjacent to the terrace</a>. We will have one nanny per six kids and parents will be free to check in on their children whenever they please. 
 						</p>
 					</p>
 
