Removed salon link in FAQ

--- a/index.html
+++ b/index.html
@@ -696,7 +696,7 @@
 						<p class="faqAnswer2">
 							The venue is located on a rooftop terrace and is not suitable for small children. However, we are providing a nanny service free of charge for all of
 							our guests and it covers the duration of the entire reception. This is an accommodation provided by the venue and children ages 2 - 9 will be cared for inside of
-							a <a href="/pages/salon-for-kids.html">salon adjacent to the terrace</a>. We will have one nanny per six kids and parents will be free to check in on their children whenever they please. 
+							a salon adjacent to the terrace. We will have one nanny per six kids and parents will be free to check in on their children whenever they please. 
 						</p>
 					</p>
 
