Added a delay to the jumbotron and navbar animations

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 	<body class="langWrap">
 		<!-- Navbar -->
-		<nav class="navbar fixed-top navbar-expand-xl navbar-dark animate__animated animate__fadeInDown">
+		<nav class="navbar fixed-top navbar-expand-xl navbar-dark animate__animated animate__fadeInDown animate__delay-2s">
 			<div class="container" id="remove">
 				<!-- <a class="navbar-brand" href="#">Navbar</a> -->
 				<button
@@ -84,7 +84,7 @@
 		</nav>
 
 		<!-- Change Language Notification -->
-		<div class="animate__animated animate__fadeInDown animate__delay-1s" id="changeLanguageNotification">
+		<div class="animate__animated animate__fadeInDown animate__delay-3s" id="changeLanguageNotification">
 			<div class="langNotFlex1">
 				<button id="languageButton" onclick="removeLanguageNotification()"><i class="fas fa-times fa-lg"></i></button>
 			</div>
@@ -95,16 +95,16 @@
 		</div>
 
 		<!-- RSVP Jumbotron -->
-		<div class="container-fluid flex-master animate__animated animate__fadeIn" id="rsvp">
+		<div class="container-fluid flex-master" id="rsvp">
 			<div class="flex-1">
 				<div class="jumbotron-header">
-					<h1 class="jumbotron-h1 rsvpTitle animate__animated animate__fadeInDown">Marilynn & Ivan's Wedding</h1>
+					<h1 class="jumbotron-h1 rsvpTitle animate__animated animate__fadeInDown animate__delay-2s">Marilynn & Ivan's Wedding</h1>
 					
 					<a
 						href="http://ortizmurowedding.rsvpify.com"
 						target="_blank"
 						rel="noopener noreferrer">
-						<button class="rsvp-button jumbotron-rsvp animate__animated animate__fadeInDown">
+						<button class="rsvp-button jumbotron-rsvp animate__animated animate__fadeInDown animate__delay-2s">
 							<img
 								class="invitation-image"
 								src="/images/jumbotron/wedding-card.svg"
@@ -116,7 +116,7 @@
 			</div>
 
 			<div class="flex-2">
-				<div class="jumbotron-text animate__animated animate__fadeInDown">
+				<div class="jumbotron-text animate__animated animate__fadeInDown animate__delay-2s">
 					<span class="rsvpDate">Friday, July 30, 2021</span>
 					<br>
 					<span>Morelia, Michoacán, México</span>
@@ -227,7 +227,7 @@
 					</p>
 				</div>
 
-				<div class="col-lg-6 order-lg-1 wow animate__animated animate__fadeInLeft" data-wow-offset="300"">
+				<div class="col-lg-6 order-lg-1 wow animate__animated animate__fadeInLeft" data-wow-offset="300">
 					<div class="youtube-container">
 						<iframe
 							class="youtube-video"
@@ -334,7 +334,7 @@
 									Another great option that's also located across from the main plaza and cathedral. This hotel has a more modern feel and has great rates. 
 								</p>
 								<p><i class="fas fa-phone-alt"></i><a href="tel:+52800-450-0000">+52 (800) 450-0000</a></p>
-								<p><i class="far fa-envelope"></i><a href = "mailto: reserva@hotel-alameda.com.mx">reserva@hotel-alameda.com.mx</p>
+								<p><i class="far fa-envelope"></i><a href = "mailto: reserva@hotel-alameda.com.mx">reserva@hotel-alameda.com.mx</a></p>
 								<p>
 									<a
 										href="https://www.hotel-alameda.com.mx/"
