Updated FAQs, added finance app buttons, updated Venue section.

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 					<div class="navbar-nav">
 						<a class="nav-link js-scroll-trigger" href="#rsvp">RSVP</a>
 						<a class="nav-link js-scroll-trigger navCeremony" href="#ceremony" >Ceremony</a>
-						<a class="nav-link js-scroll-trigger navVenue" href="#venue">Reception</a>
+						<a class="nav-link js-scroll-trigger navVenue" href="#venue">Venue</a>
 						<a class="nav-link js-scroll-trigger navHotels" href="#hotels">Hotels</a>
 						<a class="nav-link js-scroll-trigger navTravelInformation" href="#travel-information">Travel Information</a>
 						<a class="nav-link js-scroll-trigger navFAQ" href="#faqs">FAQs</a>
@@ -214,16 +214,22 @@
 		<div class="container-fluid venue" id="venue">
 			<div class="row align-items-center">
 				<div class="col-lg-6 order-lg-2 wow animate__animated animate__fadeInRight" data-wow-offset="300">
-					<h2 class="venueTitle">Reception</h2>
+					<h2 class="venueTitle">Venue</h2>
 					<p class="church-venue-text">
-						<i class="far fa-building"></i
-						><a
+						<i class="fas fa-building"></i>
+						<a
 							href="https://www.casagrandemorelia.com.mx/"
 							target="_blank"
-							rel="noopener noreferrer"
-							>Casa Grande Morelia</a
-						>
-						<br /><i class="far fa-clock"></i>7:00PM - 12:00AM
+							rel="noopener noreferrer">
+							Casa Grande Morelia</a>
+					</p>
+					<p>
+						<i class="fas fa-cocktail"></i><span class="cocktailHour">Cocktail Hour</span>
+						<br />5:00 - 6:00PM
+					</p>
+					<p>
+						<i class="far fa-clock"></i><span class="receptionTitle">Reception</span>
+						<br />6:00PM - 12:00AM
 					</p>
 				</div>
 
@@ -334,7 +340,7 @@
 									Another great option that's also located across from the main plaza and cathedral. This hotel has a more modern feel and has great rates. 
 								</p>
 								<p><i class="fas fa-phone-alt"></i><a href="tel:+52800-450-0000">+52 (800) 450-0000</a></p>
-								<p><i class="far fa-envelope"></i><a href = "mailto: reserva@hotel-alameda.com.mx">reserva@hotel-alameda.com.mx</a></p>
+								<p><i class="fas fa-envelope"></i><a href = "mailto: reserva@hotel-alameda.com.mx">reserva@hotel-alameda.com.mx</a></p>
 								<p>
 									<a
 										href="https://www.hotel-alameda.com.mx/"
@@ -394,7 +400,7 @@
 									Our number one recommendation due to its great price and location. This hotel is directly across the street from the cathedral.
 								</p>
 								<p><i class="fas fa-phone-alt"></i><a href="tel:+52443-312-0036">+52 (443) 312-0036</a></p>
-								<p><i class="far fa-envelope"></i><a href = "mailto:juaninos@hoteljuaninos.com">juaninos@hoteljuaninos.com</p>
+								<p><i class="fas fa-envelope"></i><a href = "mailto:juaninos@hoteljuaninos.com">juaninos@hoteljuaninos.com</p>
 								
 								<p>
 									<a
@@ -451,7 +457,7 @@
 									second choice after Hotel Los Juaninos.
 								</p>
 								<p><i class="fas fa-phone-alt"></i><a href="tel:+52443-232-0246">+52 (443) 232-0246</a></p>
-								<p><i class="far fa-envelope"></i><a href = "mailto:info@hherencia.com">info@hherencia.com</p>
+								<p><i class="fas fa-envelope"></i><a href = "mailto:info@hherencia.com">info@hherencia.com</p>
 								<p>
 									<a
 										href="https://www.hherencia.com/home-in/"
@@ -509,7 +515,7 @@
 									A crown jewel, this is one of the most luxurious accommodations in all of Morelia. Incredible hotel with fantastic architecture.
 								</p>
 								<p><i class="fas fa-phone-alt"></i><a href="tel:+52443-312-1888">+52 (443) 312-1888</a></p>
-								<p><i class="far fa-envelope"></i><a href = "mailto:reservaciones@hsoledad.com">reservaciones@hsoledad.com</p>
+								<p><i class="fas fa-envelope"></i><a href = "mailto:reservaciones@hsoledad.com">reservaciones@hsoledad.com</p>
 								<p>
 									<a
 										href="https://hoteldelasoledad.com/en/"
@@ -703,16 +709,22 @@
 					<p class="faq-body">
 						<strong><span class="faqQuestion3">Can I bring a guest?</span></strong>
 						<p class="faqAnswer3">
-							Unfortunately, we can only admit those that are part of your RSVP group. There is a strict limit on seating and all of the meals
-							are accounted for according to the number of guests that RSVP'd. Thank you for your understanding. 
+							Unfortunately, we can only admit those that are part of your RSVP group. All of the meals are accounted for according to the number of guests that RSVP'd and we will have assigned seating.
+							Therefore, please be aware that those that are not on the guest list will not be admitted into the venue. Thank you for your understanding.
 						</p>
 					</p>
 
 					<p class="faq-body">
 						<strong><span class="faqQuestion4">Are you registered anywhere?</span></strong>
 						<p class="faqAnswer4">
-							We ask only for your love and presence on our special day but if you were thinking of giving a gift, we would appreciate a cash gift to help us save for our new home. Thank you!
+							We ask only for your love and presence on our special day but if you were thinking of giving a gift, we would appreciate a cash gift to help us save for our first home. We can also accept gifts electronically via the platforms below. Thank you!
 						</p>
+
+						<div class="finance-app-buttons">
+							<button type="button" class="btn btn-light finance-app-button"><a href="https://www.zellepay.com/" target="_blank" rel="noopener noreferrer"><img alt="zelle" class="finance-app-image" src="images/finance_apps/Zelle.svg" /></a></button>
+							<button type="button" class="btn btn-light finance-app-button"><a href="https://venmo.com/ivunortiz" target="_blank" rel="noopener noreferrer"><img alt="venmo" class="finance-app-image" src="images/finance_apps/Venmo.svg" /></a></button>
+							<button type="button" class="btn btn-light finance-app-button"><a href="https://paypal.com/paypalme/ivanandmarilynn" target="_blank" rel="noopener noreferrer"><img alt="paypal" class="finance-app-image" src="images/finance_apps/PayPal.svg" /></a></button>
+						</div>
 					</p>
 
 					<p class="faq-body">
