Updated RSVP deadline date

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 					<span class="rsvpDate">Friday, July 30, 2021</span>
 					<br>
 					<span>Morelia, Michoacán, México</span>
-					<p class="rsvpDeadline">The deadline to RSVP is Sunday, May 30</p>
+					<p class="rsvpDeadline">The RSVP list will close on Sunday, July 4</p>
 				</div>
 			</div>
 
