--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 									href="https://www.kayak.com/hotels/Misin-Catedral-Morelia,Morelia-c23807-h164480-details/2021-07-28/2021-08-01/2adults?sid=KdBECq--G0#overview"
 									target="_blank"
 									rel="noopener noreferrer">
-									<button class="kayak-button hvr-float">
+									<button class="kayak-button">
 										<span class="hotelCompareKAYAK1">Compare prices on </span><img src="/images/hotels/KAYAK.svg" class="kayak-logo" alt="KAYAK"/>
 									</button>
 								</a>
@@ -367,7 +367,7 @@
 									href="https://www.kayak.com/hotels/Hotel-Alameda-Centro-Historico,Morelia-c23807-h161154-details/2021-07-28/2021-08-01/2adults?sid=KdCkLri-0x#overview"
 									target="_blank"
 									rel="noopener noreferrer">
-									<button class="kayak-button hvr-float">
+									<button class="kayak-button">
 										<span class="hotelCompareKAYAK2">Compare prices on </span><img src="/images/hotels/KAYAK.svg" class="kayak-logo" alt="KAYAK"/>
 									</button>
 								</a>
@@ -400,7 +400,7 @@
 									Our number one recommendation due to its great price and location. This hotel is directly across the street from the cathedral.
 								</p>
 								<p><i class="fas fa-phone-alt"></i><a href="tel:+52443-312-0036">+52 (443) 312-0036</a></p>
-								<p><i class="fas fa-envelope"></i><a href = "mailto:juaninos@hoteljuaninos.com">juaninos@hoteljuaninos.com</p>
+								<p><i class="fas fa-envelope"></i><a href = "mailto:juaninos@hoteljuaninos.com">juaninos@hoteljuaninos.com</a></p>
 								
 								<p>
 									<a
@@ -428,7 +428,7 @@
 									href="https://www.kayak.com/hotels/Los-Juaninos,Morelia-c23807-h97198-details/2021-07-28/2021-08-01/2adults?sid=KdDEOq-7TK"
 									target="_blank"
 									rel="noopener noreferrer">
-									<button class="kayak-button hvr-float">
+									<button class="kayak-button">
 										<span class="hotelCompareKAYAK3">Compare prices on </span><img src="/images/hotels/KAYAK.svg" class="kayak-logo" alt="KAYAK"/>
 									</button>
 								</a>
@@ -457,7 +457,7 @@
 									second choice after Hotel Los Juaninos.
 								</p>
 								<p><i class="fas fa-phone-alt"></i><a href="tel:+52443-232-0246">+52 (443) 232-0246</a></p>
-								<p><i class="fas fa-envelope"></i><a href = "mailto:info@hherencia.com">info@hherencia.com</p>
+								<p><i class="fas fa-envelope"></i><a href = "mailto:info@hherencia.com">info@hherencia.com</a></p>
 								<p>
 									<a
 										href="https://www.hherencia.com/home-in/"
@@ -484,7 +484,7 @@
 									href="https://www.kayak.com/hotels/Herencia-By-Hosting-House,Morelia-c23807-h269897-details/2021-07-28/2021-08-01/2adults?sid=KdDkGZh5G3#overview"
 									target="_blank"
 									rel="noopener noreferrer">
-									<button class="kayak-button hvr-float">
+									<button class="kayak-button">
 										<span class="hotelCompareKAYAK4">Compare prices on </span><img src="/images/hotels/KAYAK.svg" class="kayak-logo" alt="KAYAK"/>
 									</button>
 								</a>
@@ -515,7 +515,7 @@
 									A crown jewel, this is one of the most luxurious accommodations in all of Morelia. Incredible hotel with fantastic architecture.
 								</p>
 								<p><i class="fas fa-phone-alt"></i><a href="tel:+52443-312-1888">+52 (443) 312-1888</a></p>
-								<p><i class="fas fa-envelope"></i><a href = "mailto:reservaciones@hsoledad.com">reservaciones@hsoledad.com</p>
+								<p><i class="fas fa-envelope"></i><a href = "mailto:reservaciones@hsoledad.com">reservaciones@hsoledad.com</a></p>
 								<p>
 									<a
 										href="https://hoteldelasoledad.com/en/"
@@ -542,7 +542,7 @@
 									href="https://www.kayak.com/hotels/Hotel-de-la-Soledad,Morelia-c23807-h185802-details/2021-07-28/2021-08-01/2adults?sid=KbCkCh6vJv#overview"
 									target="_blank"
 									rel="noopener noreferrer">
-									<button class="kayak-button hvr-float">
+									<button class="kayak-button">
 										<span class="hotelCompareKAYAK5">Compare prices on </span><img src="/images/hotels/KAYAK.svg" class="kayak-logo" alt="KAYAK"/>
 									</button>
 								</a>
@@ -600,7 +600,7 @@
 									href="https://www.kayak.com/hotels/Cantera-Diez-Hotel-Boutique,Morelia-c23807-h203059-details/2021-07-28/2021-08-01/2adults?sid=KdDkD5evvH#overview"
 									target="_blank"
 									rel="noopener noreferrer">
-									<button class="kayak-button hvr-float">
+									<button class="kayak-button">
 										<span class="hotelCompareKAYAK6">Compare prices on </span><img src="/images/hotels/KAYAK.svg" class="kayak-logo" alt="KAYAK"/>
 									</button>
 								</a>
@@ -618,14 +618,14 @@
 				<div class="col-xs-12">
 					<h2 class="travelInformationTitle">Travel Information</h2>
 					<div class="row travel-info-row">
-						<div class="col-md-2">
+						<div class="col-md-1">
 							<img
 								src="images/travel-information/plane.svg"
 								class="travel-information-icons"
 							/>
 						</div>
 
-						<div class="col-md-10">
+						<div class="col-md-11">
 							<a
 								class="travelInformationAirport"
 								href="https://www.google.com/maps/place/General+Francisco+Mujica+International+Airport/@19.7693433,-101.1741037,12z/data=!3m1!5s0x842d19aa987ab5e7:0xccb880dbf3843650!4m5!3m4!1s0x842d18fe1cff6a55:0xd460e1495d49a9a0!8m2!3d19.8464645!4d-101.0281372"
@@ -638,14 +638,14 @@
 					</div>
 
 					<div class="row travel-info-row">
-						<div class="col-md-2">
+						<div class="col-md-1">
 							<img
 								src="images/travel-information/passport.svg"
 								class="travel-information-icons"
 							/>
 						</div>
 
-						<div class="col-md-10">
+						<div class="col-md-11">
 							<span class="travelInformationPassport1">In order to travel to Mexico, you will need a valid U.S. passport.
 							If you do not have one or if it has expired, please take the
 							necessary steps to obtain or renew your passport. Please visit the</span>
@@ -661,14 +661,14 @@
 					</div>
 
 					<div class="row travel-info-row">
-						<div class="col-md-2">
+						<div class="col-md-1">
 							<img
 								src="images/travel-information/money.svg"
 								class="travel-information-icons"
 							/>
 						</div>
 
-						<div class="col-md-10">
+						<div class="col-md-11">
 							<span class="travelInformationExchange1">The currency in Mexico is the Peso and the</span>
 							<a
 								class="travelInformationExchange2" 
@@ -677,6 +677,66 @@
 								rel="noopener noreferrer">
 								exchange rate</a>
 							<span class="travelInformationExchange3">is usually around $20 MXN for $1 USD.</span>
+						</div>
+					</div>
+
+					<div class="row travel-info-row">
+						<div class="col-md-12">
+							<div>
+								<button class="accordion">How can I get to my hotel from the airport?</button>
+								<div class="panel">
+									<p>
+										<ul class="unordered-list">
+											<li>
+												Most hotels offer a shuttle service (for a fee) for large groups of passengers. Please contact your hotel for more information. 
+											</li>
+											<li style="margin-top:1rem;">
+												There are always taxis available directly in front of the airport. They are 4-door sedans and can fit a total of 4 passengers per vehicle. The drivers know all of the major hotels located in the center of the city
+												and all you will have to do is give them the name of the hotel. The typical cost of a ride to the city from the aiport is $480 pesos (~$24 USD).
+											</li>
+										</ul>
+									</p>
+								</div>
+
+								<button class="accordion">Where can I exchange currency?</button>
+								<div class="panel">
+									<p>
+										<ul class="unordered-list">
+											<li>
+												Most banks offer currency exchange services. Please be aware that you will most likely have to wait 2-3 days for the exchange to be ready so please be sure to submit your request at least 5 days before leaving for Mexico.
+												<br><a href="https://www.bankofamerica.com/foreign-exchange/currency-converter/?currency=131MXN" target="_blank" rel="noopener noreferrer" style="margin-top:0.5rem;">Bank of America</a>
+												<br><a href="https://www.wellsfargo.com/foreign-exchange/currency-rates/" target="_blank" rel="noopener noreferrer">Wells Fargo</a>
+												<br><a href="https://online.citi.com/US/JRS/pands/detail.do?ID=WorldWallet" target="_blank" rel="noopener noreferrer">Citi</a>
+											</li>
+											<li style="margin-top:1rem;">
+												You may also withdraw cash from an ATM in Morelia using your debit card. There are numerous banks located near the cathedral but the one we regularly use is <a href="https://goo.gl/maps/JiFt9fEQBjrWKkYW6" target="_blank" rel="noopener noreferrer">BBVA Bancomer</a>.
+												Please be aware that there is a foreign withdrawal fee of around $8 USD with BBVA and we expect this to also be the case with the other banks. 
+											</li>
+										</ul>
+									</p>
+								</div>
+
+								<button class="accordion">Flying from Tijuana/San Diego</button>
+								<div class="panel" style="line-height: 1.75rem;">
+									<p style="margin-top:1rem;">
+										We typically fly from Tijuana Airport via the <a href="https://g.page/Crossborderxpress?share" target="_blank" rel="noopener noreferrer" style="color:rgb(92, 47, 139); font-weight:600;">Cross Border Xpress</a> bridge as we find it to be more economical and much less of a hassle compared to LAX.
+										<strong>You do NOT need to cross the border into Mexico and on your return trip home, do NOT exit the airport into Tijuana.</strong> You will never set foot in Tijuana, you cross from San Diego into Tijuana through the CBX bridge
+										and vice-versa on your way back home.
+										<ul class="unordered-list">
+											<li style="margin-top:1rem;">
+												This is NOT San Diego International Airport. These are two different locations!
+											</li>
+											<li style="margin-top:1rem;">
+												There are numerous parking lots leading up to CBX and the <a href="https://www.crossborderxpress.com/en/parking" target="_blank" rel="noopener noreferrer">price starts at $15 USD per day</a>. (You are leaving your car in San Diego, not Tijuana).
+											</li>
+											<li style="margin-top:1rem;">
+												You may purchase your CBX tickets in advance via their app (<a href="https://apps.apple.com/us/app/cross-border-xpress/id1528607079" target="_blank" rel="noopener noreferrer">App Store</a> / <a href="https://play.google.com/store/apps/details?id=com.crossborderxpress.app&hl=en&gl=US" target="_blank" rel="noopener noreferrer">Google Play</a>) or website and they will e-mail you a PDF file containing a QR code with your bridge pass. 
+											</li>
+										</ul>
+										Please visit the <a href="https://www.crossborderxpress.com/en/" target="_blank" rel="noopener noreferrer">CBX website</a> for more information.
+									</p>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -784,6 +844,7 @@
 		<script src="/javascript/switchLanguages.js"></script>
 		<script src="/javascript/removeLanguageNotification.js"></script>
 		<script src="javascript/navbarCollapse.js" type="text/javascript"></script>
+		<script src="javascript/accordion.js" type="text/javascript"></script>
 
 		<!-- WOW JavaScript -->
         <script> new WOW().init();</script>
