--- a/pages/things-to-do.html
+++ b/pages/things-to-do.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 		<!-- Bootstrap CDN -->
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous"/>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
 		<!-- Google Fonts -->
 		<link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -17,7 +17,7 @@
 
 		<!-- Custom CSS -->
 		<link rel="stylesheet" href="/css/style.css" />
-		<link rel="stylesheet" href="/css/food-menu/food-menu.css" />
+		<link rel="stylesheet" href="/css/sub_page.css" />
 		<link rel="stylesheet" href="/css/footer.css" />
 
 		<!-- Animate CSS -->
@@ -44,12 +44,12 @@
 			<!-- Navigation Bar -->
 			<nav class="navigation-bar">
 				<div class="navigation-bar-flex-left animate__animated animate__fadeInLeft">
-					<a href="./index.html" class="hvr-icon-back" id="home-button"><i class="fas fa-chevron-left hvr-icon"></i>Home</a>
+					<a href="/index.html#travel-information" class="hvr-icon-back" id="home-button"><i class="fas fa-chevron-left hvr-icon"></i>Home</a>
 				</div>
 				<div class="navigation-bar-flex-right animate__animated animate__fadeInRight">
-					<a href="javascript:void(0)" class="languageLinks food-menu-language-links js-scroll-trigger active" language="english">English</a>
-					<span class="food-menu-language-links" id="food-menu-divider">|</span>
-					<a href="javascript:void(0)" class="languageLinks food-menu-language-links js-scroll-trigger" language="spanish">Español</a>
+					<a href="javascript:void(0)" class="languageLinks english-spanish-language-links js-scroll-trigger active" language="english">English</a>
+					<span class="english-spanish-language-links" id="nav-divider-vertical">|</span>
+					<a href="javascript:void(0)" class="languageLinks english-spanish-language-links js-scroll-trigger" language="spanish">Español</a>
 				</div>
 			</nav>
 
@@ -72,30 +72,16 @@
 			<span class="copyright-text"><i class="fa fa-copyright"></i> Ivan Ortiz 2021</span>
 		</Footer>
 
-		<!-- Bootstrap scripts -->
-		<script
-			src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-			integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-			crossorigin="anonymous"
-		></script>
-
-		<script
-			src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-			integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-			crossorigin="anonymous"
-		></script>
-
-		<script
-			src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
-			integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
-			crossorigin="anonymous"
-		></script>
-
 		<!-- Custom JavaScript -->
 		<script src="/javascript/food/language-database-food-menu.js"></script>
 		<script src="/javascript/food/switch-languages-food-menu.js"></script>
 
 		<!-- WOW JavaScript -->
         <script> new WOW().init();</script>
+
+		<!-- Bootstrap scripts -->
+		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+
 	</body>
 </html>
