Working on things-to-do

--- a/pages/things-to-do.html
+++ b/pages/things-to-do.html
@@ -17,6 +17,7 @@
 
 		<!-- Custom CSS -->
 		<link rel="stylesheet" href="/css/style.css" />
+		<link rel="stylesheet" href="/css/thingsToDo.css" />
 		<link rel="stylesheet" href="/css/sub_page.css" />
 		<link rel="stylesheet" href="/css/footer.css" />
 
@@ -44,7 +45,7 @@
 			<!-- Navigation Bar -->
 			<nav class="navigation-bar">
 				<div class="navigation-bar-flex-left animate__animated animate__fadeInLeft">
-					<a href="/index.html#travel-information" class="hvr-icon-back" id="home-button"><i class="fas fa-chevron-left hvr-icon"></i>Home</a>
+					<a href="/index.html" class="hvr-icon-back" id="home-button"><i class="fas fa-chevron-left hvr-icon"></i>Home</a>
 				</div>
 				<div class="navigation-bar-flex-right animate__animated animate__fadeInRight">
 					<a href="javascript:void(0)" class="languageLinks english-spanish-language-links js-scroll-trigger active" language="english">English</a>
@@ -52,10 +53,83 @@
 					<a href="javascript:void(0)" class="languageLinks english-spanish-language-links js-scroll-trigger" language="spanish">Español</a>
 				</div>
 			</nav>
-
 		</div>
 
-			
+		<div class="container" style="margin-bottom: 2rem;">
+			<h2>Places to Eat</h2>
+			<div class="row-of-cards">
+				<div class="card">
+					<div class="ribbon">
+						<span class="breakfastRibbon">Breakfast</span>
+					</div>
+					<img src="/assets/images/things_to_do/coffee.webp" class="main-image">
+					<div class="overlay" style="margin:0 auto;">
+						<img src="/assets/images/things_to_do/cafe_michelena.webp" alt="..." class="card-image" style="width:100%; height:auto;">
+
+						<div class="overlay-card-text">
+							<h5 style="margin:0; padding:0 1rem;">Cafe Michelena</h5>
+							<p style="margin: 0; padding:0 1rem;">
+								A charming little cafe that offers coffee, bread, muffins, and standard breakfast and lunch menus along with either indoor or outdoor seating.
+							</p>
+							<p style="margin:0; padding:0 1rem;"><a href="https://goo.gl/maps/dyiZ3SoymMzgfvs46" target="_blank" rel="noopener noreferrer">Get Directions</a></p>
+						</div>
+					</div>
+				</div>
+
+				<div class="card">
+					<div class="ribbon">
+						<span class="lunchDinnerRibbon">Lunch / Dinner</span>
+					</div>
+					<img src="/assets/images/things_to_do/carnitas.webp" class="main-image">
+					<div class="overlay" style="margin:0 auto;">
+						<img src="/assets/images/things_to_do/don_pepes.webp" alt="..." class="card-image" style="width:100%; height:auto;">
+
+						<div class="overlay-card-text">
+							<h5 style="margin:0; padding:0 1rem;">Carnitas Don Pepe</h5>
+							<p style="margin: 0; padding:0 1rem;">Fantastic carnitas served with tortillas, beans, jalapenos, guacamole, and salsa.</p>
+							<p style="margin:0; padding:0 1rem;"><a href="https://goo.gl/maps/nLUzyCfVyCduYuix8" target="_blank" rel="noopener noreferrer">Get Directions</a></p>
+						</div>
+					</div>
+				</div>
+
+				<div class="card">
+					<div class="ribbon">
+						<span class="dinnerRibbon">Dinner</span>
+					</div>
+					<img src="/assets/images/things_to_do/taqueria_2.webp" class="main-image">
+					<div class="overlay" style="margin:0 auto;">
+						<img src="/assets/images/things_to_do/taqueria_1.webp" alt="..." class="card-image" style="width:100%; height:auto;">
+
+						<div class="overlay-card-text">
+							<h5 style="margin:0; padding:0 1rem;">Taquería Cuautla</h5>
+							<p style="margin: 0; padding:0 1rem;">Our favorite taco spot in the city that serves delicious tacos with carne asada, al pastor, lengua, and our favorite - chorizo.</p>
+							<p style="margin:0; padding:0 1rem;"><a href="https://goo.gl/maps/5LsCEvtLdyde2N7X7" target="_blank" rel="noopener noreferrer">Get Directions</a></p>
+						</div>
+					</div>
+				</div>
+
+				<div class="card">
+					<div class="ribbon">
+						<span class="breakfastRibbon">Breakfast</span>
+					</div>
+					<video width="100%" height="auto" style="border-radius:2rem; max-width:19rem;" autoplay muted  loop controls>
+						<source src="/assets/videos/la_soledad.mp4" type="video/mp4">
+					  	Your browser does not support the video tag.
+					</video> 
+
+					<div class="overlay-video" style="margin:0 auto;">
+						<img src="/assets/images/things_to_do/la_soledad_restaurant.webp" alt="..." class="card-image" style="width:100%; height:auto;">
+
+						<div class="overlay-card-text" style="justify-content:center;">
+							<h5 style="margin:0; padding:0 1rem;">Hotel de la Soledad</h5>
+							<p style="margin: 0; padding:0 1rem;">Top notch restaurant with peaceful and serene outdoor dining.</p>
+							<p style="margin:0; padding:0 1rem;"><a href="https://goo.gl/maps/qJvDYymNMzG4qcu36" target="_blank" rel="noopener noreferrer">Get Directions</a></p>
+							<p style="margin:0; padding:0 1rem;"><a href="https://hoteldelasoledad.com/restaurante.php" target="_blank" rel="noopener noreferrer">Restaurant Website</a></p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>	
 		
 		<!-- Footer -->
 		<Footer class="container-fluid footer">
