--- a/index.html
+++ b/index.html
@@ -71,7 +71,17 @@
 						<a class="nav-link js-scroll-trigger navCeremony" href="#ceremony" >Ceremony</a>
 						<a class="nav-link js-scroll-trigger navVenue" href="#venue">Venue</a>
 						<a class="nav-link js-scroll-trigger navHotels" href="#hotels">Hotels</a>
-						<a class="nav-link js-scroll-trigger navTravelInformation" href="#travel-information">Travel Information</a>
+						<ul class="navbar-nav">
+							<li class="nav-item dropdown">
+							  <a class="nav-link dropdown-toggle navTravelInformation" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+								Travel Information
+							  </a>
+							  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+								<a class="dropdown-item js-scroll-trigger navBasicInformation" href="#travel-information" style="text-decoration: none;">Basic Information</a>
+								<a class="dropdown-item js-scroll-trigger navThingsToDo" href="/pages/things-to-do.html" style="text-decoration: none;">Things to do in Morelia</a>
+							  </div>
+							</li>
+						  </ul>
 						<a class="nav-link js-scroll-trigger navFAQ" href="#faqs">FAQs</a>
 						<a class="nav-link js-scroll-trigger" id="nav-divider">|</a>
 						<div class="dropdown-divider"></div>
@@ -107,7 +117,7 @@
 						<button class="rsvp-button jumbotron-rsvp animate__animated animate__fadeInDown animate__delay-2s">
 							<img
 								class="invitation-image"
-								src="/images/jumbotron/wedding-card.svg"
+								src="/assets/images/jumbotron/wedding-card.svg"
 								alt="invitation"
 							/>RSVP
 						</button>
@@ -147,35 +157,35 @@
 						<div class="carousel-inner">
 							<div class="carousel-item active">
 								<img
-									src="/images/catedral/catedral1.webp"
+									src="/assets/images/catedral/catedral1.webp"
 									class="d-block w-100"
 									alt="..."
 								/>
 							</div>
 							<div class="carousel-item">
 								<img
-									src="/images/catedral/catedral2.webp"
+									src="/assets/images/catedral/catedral2.webp"
 									class="d-block w-100"
 									alt="..."
 								/>
 							</div>
 							<div class="carousel-item">
 								<img
-									src="/images/catedral/catedral3.webp"
+									src="/assets/images/catedral/catedral3.webp"
 									class="d-block w-100"
 									alt="..."
 								/>
 							</div>
 							<div class="carousel-item">
 								<img
-									src="/images/catedral/catedral4.webp"
+									src="/assets/images/catedral/catedral4.webp"
 									class="d-block w-100"
 									alt="..."
 								/>
 							</div>
 							<div class="carousel-item">
 								<img
-									src="/images/catedral/catedral5.webp"
+									src="/assets/images/catedral/catedral5.webp"
 									class="d-block w-100"
 									alt="..."
 								/>
@@ -271,7 +281,7 @@
 				<div class="col-md-6 col-lg-4 d-flex align-items-stretch">
 					<div class="card">
 						<img
-							src="/images/hotels/hotel-mision-catedral.webp"
+							src="/assets/images/hotels/hotel-mision-catedral.webp"
 							class="card-img-top"
 							alt="Hotel Mision Catedral"
 						/>
@@ -314,7 +324,7 @@
 									target="_blank"
 									rel="noopener noreferrer">
 									<button class="kayak-button">
-										<span class="hotelCompareKAYAK1">Compare prices on </span><img src="/images/hotels/KAYAK.svg" class="kayak-logo" alt="KAYAK"/>
+										<span class="hotelCompareKAYAK1">Compare prices on </span><img src="/assets/images/hotels/KAYAK.svg" class="kayak-logo" alt="KAYAK"/>
 									</button>
 								</a>
 							</div>
@@ -325,7 +335,7 @@
 				<div class="col-md-6 col-lg-4 d-flex align-items-stretch">
 					<div class="card">
 						<img
-							src="/images/hotels/alameda.webp"
+							src="/assets/images/hotels/alameda.webp"
 							class="card-img-top"
 							alt="Hotel Alameda"
 						/>
@@ -368,7 +378,7 @@
 									target="_blank"
 									rel="noopener noreferrer">
 									<button class="kayak-button">
-										<span class="hotelCompareKAYAK2">Compare prices on </span><img src="/images/hotels/KAYAK.svg" class="kayak-logo" alt="KAYAK"/>
+										<span class="hotelCompareKAYAK2">Compare prices on </span><img src="/assets/images/hotels/KAYAK.svg" class="kayak-logo" alt="KAYAK"/>
 									</button>
 								</a>
 							</div>							
@@ -382,7 +392,7 @@
 							<span class="hotelLosJuaninosRibbon">Our top choice</span>
 						</div>
 						<img
-							src="/images/hotels/juaninos.webp"
+							src="/assets/images/hotels/juaninos.webp"
 							class="card-img-top"
 							alt="Hotel Los Juaninos"
 						/>
@@ -429,7 +439,7 @@
 									target="_blank"
 									rel="noopener noreferrer">
 									<button class="kayak-button">
-										<span class="hotelCompareKAYAK3">Compare prices on </span><img src="/images/hotels/KAYAK.svg" class="kayak-logo" alt="KAYAK"/>
+										<span class="hotelCompareKAYAK3">Compare prices on </span><img src="/assets/images/hotels/KAYAK.svg" class="kayak-logo" alt="KAYAK"/>
 									</button>
 								</a>
 							</div>
@@ -440,7 +450,7 @@
 				<div class="col-md-6 col-lg-4 d-flex align-items-stretch">
 					<div class="card">
 						<img
-							src="/images/hotels/herencia.webp"
+							src="/assets/images/hotels/herencia.webp"
 							class="card-img-top"
 							alt="HERENCIA"
 						/>
@@ -485,7 +495,7 @@
 									target="_blank"
 									rel="noopener noreferrer">
 									<button class="kayak-button">
-										<span class="hotelCompareKAYAK4">Compare prices on </span><img src="/images/hotels/KAYAK.svg" class="kayak-logo" alt="KAYAK"/>
+										<span class="hotelCompareKAYAK4">Compare prices on </span><img src="/assets/images/hotels/KAYAK.svg" class="kayak-logo" alt="KAYAK"/>
 									</button>
 								</a>
 							</div>
@@ -496,7 +506,7 @@
 				<div class="col-md-6 col-lg-4 d-flex align-items-stretch">
 					<div class="card">
 						<img
-							src="/images/hotels/soledad.webp"
+							src="/assets/images/hotels/soledad.webp"
 							class="card-img-top"
 							alt="Hotel de La Soledad"
 						/>
@@ -543,7 +553,7 @@
 									target="_blank"
 									rel="noopener noreferrer">
 									<button class="kayak-button">
-										<span class="hotelCompareKAYAK5">Compare prices on </span><img src="/images/hotels/KAYAK.svg" class="kayak-logo" alt="KAYAK"/>
+										<span class="hotelCompareKAYAK5">Compare prices on </span><img src="/assets/images/hotels/KAYAK.svg" class="kayak-logo" alt="KAYAK"/>
 									</button>
 								</a>
 							</div>
@@ -554,7 +564,7 @@
 				<div class="col-md-6 col-lg-4 d-flex align-items-stretch">
 					<div class="card">
 						<img
-							src="/images/hotels/cantera-diez-hotel-boutique.webp"
+							src="/assets/images/hotels/cantera-diez-hotel-boutique.webp"
 							class="card-img-top"
 							alt="cantera-diez-hotel-boutique"
 						/>
@@ -601,7 +611,7 @@
 									target="_blank"
 									rel="noopener noreferrer">
 									<button class="kayak-button">
-										<span class="hotelCompareKAYAK6">Compare prices on </span><img src="/images/hotels/KAYAK.svg" class="kayak-logo" alt="KAYAK"/>
+										<span class="hotelCompareKAYAK6">Compare prices on </span><img src="/assets/images/hotels/KAYAK.svg" class="kayak-logo" alt="KAYAK"/>
 									</button>
 								</a>
 							</div>
@@ -620,7 +630,7 @@
 					<div class="row travel-info-row">
 						<div class="col-md-1">
 							<img
-								src="images/travel-information/plane.svg"
+								src="/assets/images/travel-information/plane.svg"
 								class="travel-information-icons"
 							/>
 						</div>
@@ -640,7 +650,7 @@
 					<div class="row travel-info-row">
 						<div class="col-md-1">
 							<img
-								src="images/travel-information/passport.svg"
+								src="/assets/images/travel-information/passport.svg"
 								class="travel-information-icons"
 							/>
 						</div>
@@ -663,7 +673,7 @@
 					<div class="row travel-info-row">
 						<div class="col-md-1">
 							<img
-								src="images/travel-information/money.svg"
+								src="/assets/images/travel-information/money.svg"
 								class="travel-information-icons"
 							/>
 						</div>
@@ -781,9 +791,9 @@
 						</p>
 
 						<div class="finance-app-buttons">
-							<button type="button" class="btn btn-light finance-app-button"><a href="https://www.zellepay.com/" target="_blank" rel="noopener noreferrer"><img alt="zelle" class="finance-app-image" src="images/finance_apps/Zelle.svg" /></a></button>
-							<button type="button" class="btn btn-light finance-app-button"><a href="https://venmo.com/ivunortiz" target="_blank" rel="noopener noreferrer"><img alt="venmo" class="finance-app-image" src="images/finance_apps/Venmo.svg" /></a></button>
-							<button type="button" class="btn btn-light finance-app-button"><a href="https://paypal.com/paypalme/ivanandmarilynn" target="_blank" rel="noopener noreferrer"><img alt="paypal" class="finance-app-image" src="images/finance_apps/PayPal.svg" /></a></button>
+							<button type="button" class="btn btn-light finance-app-button"><a href="https://www.zellepay.com/" target="_blank" rel="noopener noreferrer"><img alt="zelle" class="finance-app-image" src="/assets/images/finance_apps/Zelle.svg" /></a></button>
+							<button type="button" class="btn btn-light finance-app-button"><a href="https://venmo.com/ivunortiz" target="_blank" rel="noopener noreferrer"><img alt="venmo" class="finance-app-image" src="/assets/images/finance_apps/Venmo.svg" /></a></button>
+							<button type="button" class="btn btn-light finance-app-button"><a href="https://paypal.com/paypalme/ivanandmarilynn" target="_blank" rel="noopener noreferrer"><img alt="paypal" class="finance-app-image" src="/assets/images/finance_apps/PayPal.svg" /></a></button>
 						</div>
 					</p>
 
